Feat: Criando a locacaoRoute.js Docs: Fazendo as atualizações necessárias
